{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "GroundMovement",
            "id": "8502ae51-844f-408d-85ee-cecaf9fc3bdd",
            "actions": [
                {
                    "name": "HorizontalMovement",
                    "type": "PassThrough",
                    "id": "681c7086-2cde-4629-9595-6562daf36a05",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "2ad92ee6-1a8b-4485-b234-62cab72f1915",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseX",
                    "type": "PassThrough",
                    "id": "ed96f716-6a3a-4f36-adb9-335899f2b428",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MouseY",
                    "type": "PassThrough",
                    "id": "898bd129-4715-4138-abd6-5c1ada73a256",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "229dc4e9-6cb6-42c1-ba62-131355293ff8",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "6af4317b-bb57-48e9-8c8b-fc29cbbd3aa7",
                    "expectedControlType": "Stick",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jumper",
                    "type": "Button",
                    "id": "76e4da1a-967a-4f15-85b9-1a1dcf752ba3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "a9646c74-d95f-4ec7-a2ab-07e7e54c3b96",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "6cf0266d-091c-4e66-a31b-e903fb6e0a52",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e1c6006d-8039-4351-9c95-a34d865a88be",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "54521e19-2fe0-446a-807c-f5b7646e5593",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "33f48a6a-dbeb-446a-9ff4-72f702b21dbc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMovement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "10e7153d-f83f-45e6-838b-e9ee84b2c647",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e7968b09-3216-4754-a4f1-28847cb89629",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9e3562f-9435-4679-b482-890bd25102f2",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50080639-d628-4a55-aebf-083b83eebb6a",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "09250fe1-a4a9-4f2e-856f-04e560a57945",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7fa7577c-e467-4c4c-b0c3-ee93d8ce14b6",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jumper",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Minigames",
            "id": "0f7eac34-4500-469a-ab37-65317f7220c8",
            "actions": [
                {
                    "name": "ControllerButtons",
                    "type": "Button",
                    "id": "0c9a4f3d-9d33-4b3b-82f2-aadcc5e5a0e9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a443984-2e8a-4e5e-af2e-90babcabb5e2",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerButtons",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}